[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pavel2232 <pavelmazikinvladimirovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-environ = "^0.11.2"
aiogram = "^3.1.1"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
apscheduler-di = "^0.1.0"
redis = "^5.0.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
